--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -54,7 +54,25 @@
                 <div class="price_by_night">
                     $80
                 </div>
-                <div class="information">    
+                <div class="information">
+                    <div class="max_guest">
+                        <div></div>
+                        2 Guests
+                    </div>
+                    <div class="number_rooms">
+                        <div></div>
+                        1 Bedrooms
+                    </div>
+                    <div class="number_bathrooms">
+                        <div></div>
+                        1 Bathroom
+                    </div>
+                </div>
+                <div class="user">
+                    <p><b>Owner</b>: Nahuel Alvarez</p>
+                </div>
+                <div class="description">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, laborum. Mollitia animi error nulla vero natus reiciendis culpa, praesentium sit aspernatur quis voluptatum minima ipsam nesciunt expedita itaque eligendi eaque.
                 </div>
             </article>
             <article>
@@ -71,6 +89,16 @@
                         <div></div>
                         2 Bedrooms
                     </div>
+                    <div class="number_bathrooms">
+                        <div></div>
+                        1 Bathroom
+                    </div>
+                </div>
+                <div class="user">
+                    <p><b>Owner</b>: Santiago Fernandez</p>
+                </div>
+                <div class="description">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, laborum. Mollitia animi error nulla vero natus reiciendis culpa, praesentium sit aspernatur quis voluptatum minima ipsam nesciunt expedita itaque eligendi eaque.
                 </div>
             </article>
             <article>
@@ -79,6 +107,24 @@
                     $190
                 </div>
                 <div class="information">
+                    <div class="max_guest">
+                        <div></div>
+                        6 Guests
+                    </div>
+                    <div class="number_rooms">
+                        <div></div>
+                        3 Bedrooms
+                    </div>
+                    <div class="number_bathrooms">
+                        <div></div>
+                        2 Bathroom
+                    </div>
+                </div>
+                <div class="user">
+                    <p><b>Owner</b>: Ignacio Castro</p>
+                </div>
+                <div class="description">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, laborum. Mollitia animi error nulla vero natus reiciendis culpa, praesentium sit aspernatur quis voluptatum minima ipsam nesciunt expedita itaque eligendi eaque.
                 </div>
             </article>
         </section>
