--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>AirBnB Clone</title>
@@ -20,16 +20,12 @@
                 <h3>States</h3>
                 <h4> California, Arizona...</h4>
                 <ul class="popover">
-                    <h2>Arizona:</h2>
-                    <ul>
-                        <li>Page</li>
-                        <li>Page2</li>
-                    </ul>
-                    <h2>California</h2>
-                    <ul>
-                        <li>San Francisco</li>
-                        <li>Los altos</li>
-                    </ul>
+                    <li><h2>Arizona:</h2></li>
+                        <li id="fchild" class="polist">Page</li>
+                        <li class="polist">Page2</li>
+                    <li><h2>California</h2></li>
+                        <li id="schild" class="polist">San Francisco</li>
+                        <li class="polist">Los altos</li>
                 </ul>
             </div>
             <div class="amenities">
